kafka-cluster/msk/terrafrom/vpc.tf
resource "aws_vpc" "data" {
  cidr_block           = var.vpc_cidr_block
  instance_tenancy     = "default"
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags                 = var.tags
}
